K8s/platforms-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platforms-dep1
spec:
     replicas: 1
     selector:
       matchLabels:
          app: platformservice
     template: 
       metadata:
         labels:
            app: platformservice
       spec:
         containers: 
           - name: platformservice
             image: sidhantsethi/platformservice:latest
