K8s/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: commands-dep1
spec:
     replicas: 1
     selector:
       matchLabels:
          app: commandsservice
     template: 
       metadata:
         labels:
            app: commandsservice
       spec:
         containers: 
           - name: commandsservice
             image: sidhantsethi/commandsservice:latest
            
---
apiVersion: v1
kind: Service
metadata:
    name: commands-clusterip-srv
spec:
     type: ClusterIP
     selector:
          app: commandsservice
     ports:
       - name: commandsservice
         protocol: TCP
         port: 80
